--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Listado de Productos a la Venta</title>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -119,7 +121,7 @@
     <div class="volver">
       <button onclick="window.location.href='stock.html'">Ir a Stock</button>
       <button onclick="window.location.href='productos-vendidos.html'">Ir a Productos Vendidos</button>
-       <button onclick="window.location.href='resumen.html'">Ir a resumen</button>
+      <button onclick="window.location.href='resumen.html'">Ir a resumen</button>
       <button onclick="cerrarSesion()">Cerrar sesión</button>
     </div>
 
@@ -148,10 +150,26 @@
     </table>
 
     <div class="total" id="totalSeleccionado">Total seleccionado: $0.00</div>
+    
 
   </div>
+  
 
   <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDEo8PKOS6E1qlC72MK2uro6gIEaLFlr4U",
+      authDomain: "upabebe-86536.firebaseapp.com",
+      projectId: "upabebe-86536",
+      storageBucket: "upabebe-86536.appspot.com",
+      messagingSenderId: "939248975183",
+      appId: "1:939248975183:web:1f2da660f2f1274303993a",
+      measurementId: "G-G9BGPDY82J"
+    };
+
+    // Inicializar Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
     // Control de sesión
     window.onload = function () {
       const logueado = sessionStorage.getItem('logueado');
@@ -187,9 +205,14 @@
     let productosFiltrados = [];
 
     function cargarProductos() {
-      productos = JSON.parse(localStorage.getItem('productosStock')) || [];
-      productosFiltrados = [...productos];
-      renderizarTabla();
+      // Cargar productos de Firebase Firestore en lugar de localStorage
+      db.collection('productos').get().then(querySnapshot => {
+        productos = querySnapshot.docs.map(doc => doc.data());
+        productosFiltrados = [...productos];
+        renderizarTabla();
+      }).catch(error => {
+        console.error("Error al cargar productos: ", error);
+      });
     }
 
     function renderizarTabla() {
@@ -243,33 +266,34 @@
         return;
       }
 
-      let productosVendidos = JSON.parse(localStorage.getItem('productosVendidos')) || [];
+      let productosVendidos = [];
 
       checkboxes.forEach(cb => {
         const index = parseInt(cb.dataset.index);
         const producto = productosFiltrados[index];
 
-        const realIndex = productos.findIndex(p =>
-          p.producto === producto.producto &&
-          p.talle === producto.talle &&
-          p.descripcion === producto.descripcion &&
-          p.precioVenta === producto.precioVenta
-        );
+        const vendido = { ...producto, fechaVenta };
 
-        if (realIndex > -1) {
-          const vendido = { ...productos[realIndex], fechaVenta };
-          productosVendidos.push(vendido);
-          productos.splice(realIndex, 1);
-        }
+        // Enviar los productos vendidos a Firebase
+        db.collection('productosVendidos').add(vendido).then(() => {
+          console.log('Producto vendido registrado');
+        }).catch(error => {
+          console.error("Error al registrar producto vendido: ", error);
+        });
+
+        // Eliminar producto de Firebase
+        db.collection('productos').doc(producto.id).delete().then(() => {
+          console.log('Producto eliminado del stock');
+        }).catch(error => {
+          console.error("Error al eliminar producto: ", error);
+        });
       });
-
-      localStorage.setItem('productosStock', JSON.stringify(productos));
-      localStorage.setItem('productosVendidos', JSON.stringify(productosVendidos));
 
       alert('Productos vendidos registrados.');
       location.reload();
     }
   </script>
-
+  
 </body>
 </html>
+
